# detoks

./: .env.example  .gitignore  .npmignore  .repl-session.json  AGENTS.md  CLAUDE.md  README.en.md  README.ko.md  README.md  detoks-model-system-prompt.txt  detoks_model.md  detoks_project_kickoff.md  package-lock.json  package.json  pyproject.toml  session.md  task_classify.md  tokit_project_kickoff.md  tsconfig.json  vitest.config.ts
.devlogs/: 2026-04-24.md
.github/: pull_request_template.md
.prompts/: cli-task-context.md  codex-task-complete.md  common-agent-rules.md  git-kanban-in-progress-template.md  next-task-harness-template.md
.trace/: 0f7a4a964f57-trace.json  17a9efba9683-trace.json  20260427-024022-readme-description-r01-trace.json  20260427-024028-github-issue-pr-template-r01-trace.json  20260427-024028-github-issue-pr-template-r03-trace.json  20260427-024028-npm-test-failure-repair-r01-trace.json  20260427-024028-npm-test-failure-repair-r02-trace.json  20260427-024028-npm-test-failure-repair-r03-trace.json  20260427-024028-pipeline-duplication-refactor-r03-trace.json  20260427-024028-processor-undefined-map-fix-r01-trace.json  20260427-024028-processor-undefined-map-fix-r02-trace.json  20260427-024028-processor-undefined-map-fix-r03-trace.json  20260427-024028-readme-description-r02-trace.json  20260427-024028-readme-description-r04-trace.json  20260427-024028-release-version-changelog-tag-r01-trace.json  20260427-024028-release-version-changelog-tag-r02-trace.json  20260427-024028-release-version-changelog-tag-r03-trace.json  20260428-015929-hello-smoke-r01-trace.json  (+47 more)
(+370 files in other folders)
